# M0CLUB-PRED-ORACLE

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  M0CORE Lib Schema  README.md  SECURITY.md
M0Git/: PULL_REQUEST_TEMPLATE.md
M0Git/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
M0Git/workflows/: ci.yml  engine.yml  programs.yml  sdk.yml  security.yml
core-engine/: README.md
core-engine/crates/m0-anomaly/: Cargo.toml
core-engine/crates/m0-anomaly/src/: error.rs  guardrails.rs  lib.rs
core-engine/crates/m0-anomaly/src/detectors/: drift.rs  feed_integrity.rs  mod.rs  outlier.rs
core-engine/crates/m0-backtest/: Cargo.toml
core-engine/crates/m0-backtest/src/: dataset.rs  lib.rs  metrics.rs  reports.rs  runner.rs
core-engine/crates/m0-bundle/: Cargo.toml
core-engine/crates/m0-bundle/src/: codec.rs  format.rs  hashing.rs  lib.rs  merkle.rs
core-engine/crates/m0-common/: Cargo.toml
core-engine/crates/m0-common/src/: config.rs  env.rs  error.rs  hashing.rs  ids.rs  lib.rs  logging.rs  serde_helpers.rs  telemetry.rs  time.rs
core-engine/crates/m0-common/tests/: basic.rs
core-engine/crates/m0-core/: Cargo.toml
core-engine/crates/m0-core/src/: error.rs  lib.rs
core-engine/crates/m0-core/src/pipeline/: backtest.rs  bundle.rs  calibrate.rs  feature.rs  health.rs  ingest.rs  mod.rs  model.rs  normalize.rs
core-engine/crates/m0-core/src/runtime/: checkpoint.rs  metrics.rs  mod.rs  scheduler.rs  worker.rs
core-engine/crates/m0-core/src/types/: bundle.rs  confidence.rs  distribution.rs  event.rs  features.rs  market.rs  mod.rs
core-engine/crates/m0-feature-store/: Cargo.toml
core-engine/crates/m0-feature-store/src/: error.rs  lib.rs
core-engine/crates/m0-feature-store/src/schema/: feature.proto  feature_proto.rs  mod.rs
core-engine/crates/m0-feature-store/src/storage/: clickhouse.rs  mod.rs  postgres.rs  rocksdb.rs
core-engine/crates/m0-feature-store/src/transforms/: domain_features.rs  embeddings.rs  mod.rs  rolling_stats.rs  time_window.rs
core-engine/crates/m0-ingestor/: Cargo.toml
core-engine/crates/m0-ingestor/src/: dedupe.rs  error.rs  lib.rs  rate_limit.rs  retries.rs
core-engine/crates/m0-ingestor/src/connectors/: macro_.rs  mod.rs  politics.rs  solana.rs  sports.rs  webhooks.rs
core-engine/crates/m0-ingestor/src/stream/: consumer.rs  mod.rs  offsets.rs  producer.rs  schema.rs
core-engine/crates/m0-ingestor/tests/: basic.rs
core-engine/crates/m0-normalizer/: Cargo.toml
core-engine/crates/m0-normalizer/src/: error.rs  lib.rs
core-engine/crates/m0-normalizer/src/rules/: canonicalize.rs  enrichment.rs  mod.rs  validation.rs
core-engine/crates/m0-normalizer/src/schema/: canonical.rs  mod.rs  raw.rs
core-engine/crates/m0-quant/: Cargo.toml
core-engine/crates/m0-quant/src/: lib.rs
core-engine/crates/m0-quant/src/bayes/: inference.rs  mod.rs  posteriors.rs  priors.rs
core-engine/crates/m0-quant/src/calibration/: isotonic.rs  mod.rs  temperature.rs
core-engine/crates/m0-quant/src/confidence/: ci.rs  mod.rs  uncertainty.rs
core-engine/crates/m0-quant/src/models/: elo.rs  ensemble.rs  garch.rs  hidden_markov.rs  mod.rs  poisson.rs
core-engine/crates/m0-quant/src/risk/: cvar.rs  mod.rs  stress.rs  var.rs
core-engine/crates/m0-quant/src/scoring/: brier.rs  logloss.rs  mod.rs
core-engine/crates/m0-quant/src/utils/: linalg.rs  mod.rs  stats.rs
core-engine/crates/m0-quant/tests/: smoke.rs
core-engine/crates/m0-signer/: Cargo.toml
core-engine/crates/m0-signer/src/: commit.rs  error.rs  lib.rs  replay_protection.rs  reveal.rs  tx_submit.rs
core-engine/crates/m0-signer/src/keyring/: kms.rs  local.rs  mod.rs  rotation.rs
docs/: architecture.md  design-decisions.md  overview.md
docs/engine-spec/: calibration.md  feature-store.md  m0-core.md  normalization.md
docs/ops/: local-dev.md
docs/protocol-spec/: aggregation.md  commit-reveal.md  dispute-resolution.md  epoch-rounding.md  market-registry.md  oracle-output-format.md  slashing.md
docs/sdk/: examples.md  integration-guides.md  quickstart.md  types.md
infra/docker/: compose.dev.yml  compose.prod.yml  compose.staging.yml
infra/docker/images/: api.Dockerfile  dashboard.Dockerfile  engine.Dockerfile  indexer.Dockerfile  signer.Dockerfile
infra/k8s/configmaps/: README.md
infra/k8s/manifests/: api.yaml  dashboard.yaml  engine.yaml  indexer.yaml  ingress.yaml  jobs.yaml  realtime.yaml  signer.yaml
infra/k8s/namespaces/: m0club.yaml
infra/k8s/secrets/: README.md
infra/monitoring/alerts/: README.md
infra/monitoring/grafana/: README.md
infra/monitoring/loki/: README.md
infra/monitoring/prometheus/: prometheus.yml
infra/terraform/: main.tf
infra/terraform/modules/: README.md
programs/: README.md
programs/m0-fee-router/: Anchor.toml  Cargo.toml
programs/m0-fee-router/src/: error.rs  lib.rs
programs/m0-governance/: Anchor.toml  Cargo.toml
programs/m0-governance/src/: error.rs  lib.rs
programs/m0-oracle/: Anchor.toml  Cargo.toml
programs/m0-registry/: Anchor.toml  Cargo.toml
programs/m0-registry/src/: error.rs  events.rs  lib.rs
programs/m0-registry/src/instructions/: init_registry.rs  mod.rs  set_authority.rs  upsert_market.rs
programs/m0-registry/src/state/: metadata.rs  mod.rs  registry.rs
scripts/: bootstrap.sh  build_all.sh  deploy_programs.sh  gen_idl.sh  lint_all.sh  localnet.sh  publish_sdks.sh  release_tag.sh  seed_markets.sh  smoke_test.sh  test_all.sh
sdk/: README.md
sdk/python/: README.md  pyproject.toml
sdk/python/m0club/: __init__.py  client.py
sdk/python/m0club/examples/: basic.py
sdk/python/m0club/programs/: __init__.py
sdk/python/m0club/types/: __init__.py
sdk/python/tests/: test_smoke.py
sdk/rust/: Cargo.toml  README.md
sdk/rust/src/: client.rs  lib.rs
sdk/rust/src/examples/: basic.rs  mod.rs
sdk/rust/src/programs/: m0_oracle.rs  m0_registry.rs
sdk/rust/src/types/: mod.rs
sdk/rust/src/utils/: http.rs
sdk/rust/tests/: basic.rs
sdk/ts/: package.json  tsconfig.json
sdk/ts/src/: client.ts  (+1 more)
sdk/types/: m0_types.json  m0_types.py  m0_types.ts
tests/: README.md
(+72 files in other folders)
