
[package]
name = "m0club-sdk"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[lib]
name = "m0club"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1.36", features = ["macros", "rt-multi-thread"] }
url = "2.5"
urlencoding = "2.1"

[dev-dependencies]
tokio = { version = "1.36", features = ["macros", "rt-multi-thread"] }
