
[package]
name = "m0-common"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "M0Club shared utilities"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sha2.workspace = true
hex.workspace = true
rand.workspace = true
