
[package]
name = "m0-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "M0Club core orchestration and pipeline runtime"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

m0-common = { path = "../m0-common" }
m0-ingestor = { path = "../m0-ingestor" }
m0-normalizer = { path = "../m0-normalizer" }
m0-feature-store = { path = "../m0-feature-store" }
m0-quant = { path = "../m0-quant" }
m0-anomaly = { path = "../m0-anomaly" }
m0-bundle = { path = "../m0-bundle" }
m0-signer = { path = "../m0-signer" }
