
[package]
name = "m0-feature-store"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "M0Club feature store (storage + transforms)"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
m0-common = { path = "../m0-common" }
m0-normalizer = { path = "../m0-normalizer" }
bytes.workspace = true
prost.workspace = true
