
[package]
name = "m0-ingestor"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "M0Club data ingestion and streaming"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
async-trait.workspace = true
uuid.workspace = true
rand.workspace = true
m0-common = { path = "../m0-common" }
bytes.workspace = true
