
[package]
name = "m0-quant"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "M0Club probabilistic models and analytics"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
m0-common = { path = "../m0-common" }
